# my-mlir-journey

./: .gitignore  Makefile  README.md  debug.mlir  fibonacci.mlir
advent/: Makefile  README.md
advent-of-code-2024/: day1-part1.mlir
aoc-2024/: .gitignore  Makefile
dialect-rust/: Cargo.toml  README.md
dialect-rust/examples/: dialect.irdl  irdl.rs  pdl.rs
dialect-rust/src/: core.rs  irdl.rs  lib.rs  main.rs  pdl.rs
koala/: .gitignore  CMakeLists.txt  Makefile  main.cpp
koala/examples/: main.kl
koala/src/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp
language/: Makefile  README.md  linking_lib.c  linking_main.mlir
snippets/: .gitignore  Makefile  README.md  debug_c.c  factorial.mlir
